<resources>

    <!--Common string resources-->
    <string name="app_name">MY TV</string>
    <string name="share">Share</string>


    <!--Navigation drawer menu-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_programs">Programs</string>
    <string name="menu_rate">Rate</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>
    <string name="other">Others</string>

    <string name="programlist_heading"><b>Programs</b></string>
    <string name="see_all_text"><u>SEE MORE</u></string>

    <!--Program List-->
    <string name="programs">Programs</string>

    <!-- ad mob credential -->
    <string name="app_ad_id">ca-app-pub-6382099871444261~9778932425</string>
    <string name="banner_ad_unit_id">ca-app-pub-6382099871444261/7164732597</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-6382099871444261/4249427662</string>
    <string name="no_internet">Network not available</string>
    <string name="connect">Connect</string>

</resources>
